--- a/my-app/package.json
+++ b/my-app/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@primer/components": "^7.0.0-beta",
+    "primer-box": "^2.5.11",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-scripts-ts": "3.1.0"
@@ -19,6 +20,7 @@
     "@types/node": "^10.12.10",
     "@types/react": "^16.7.7",
     "@types/react-dom": "^16.0.10",
+    "sass": "^1.15.1",
     "typescript": "^3.1.6"
   }
 }
