--- a/my-app/package.json
+++ b/my-app/package.json
@@ -20,7 +20,9 @@
     "@types/node": "^10.12.10",
     "@types/react": "^16.7.7",
     "@types/react-dom": "^16.0.10",
+    "node-sass": "^4.10.0",
     "sass": "^1.15.1",
+    "sass-loader": "^7.1.0",
     "typescript": "^3.1.6"
   }
 }
